cluster/apps/networking/traefik/external/iot/kitchensensor/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kitchensensor
  namespace: external
subsets:
  - addresses:
      - ip: 10.40.0.16
    ports:
      - name: default
        port: 80
        protocol: TCP
