cluster/apps/networking/traefik/external/iot/kitchensensor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: motion-sensor
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: kitchensensor
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_KITCHENSENSOR_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: kitchensensor
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_KITCHENSENSOR_DOMAIN}"
      secretName: kitchensensor-tls
